@@ -1,11 +1,14 @@
 package ua.tqs.controller;
 
 import java.net.URI;
+import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,6 +17,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import jakarta.validation.Valid;
@@ -21,8 +25,11 @@ import lombok.RequiredArgsConstructor;
 import ua.tqs.dto.ToolDTO;
 import ua.tqs.enums.ToolStatus;
 import ua.tqs.exception.ResourceNotFoundException;
+import ua.tqs.model.Rent;
 import ua.tqs.model.Tool;
+import ua.tqs.service.RentService;
 import ua.tqs.service.ToolService;
+import ua.tqs.service.UserDetailsServiceImpl;
 
 @RestController
 @RequestMapping("/api/tools")
@@ -30,7 +37,12 @@ import ua.tqs.service.ToolService;
 @RequiredArgsConstructor
 public class ToolController {
 
+    private static final String AVAILABLE_KEY = "available";
+    private static final String REASON_KEY = "reason";
+
     private final ToolService toolService;
+    private final RentService rentService;
+    private final UserDetailsServiceImpl userDetailsService;
 
     @PostMapping
     public ResponseEntity<ToolDTO> create(@Valid @RequestBody ToolDTO dto) {
@@ -45,7 +57,7 @@ public class ToolController {
         List<ToolDTO> dtos = toolService.listAll()
                 .stream()
                 .map(ToolDTO::fromModel)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
@@ -54,7 +66,7 @@ public class ToolController {
         List<ToolDTO> dtos = toolService.listAvailable()
                 .stream()
                 .map(ToolDTO::fromModel)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
@@ -63,7 +75,7 @@ public class ToolController {
         List<ToolDTO> dtos = toolService.findByType(type)
                 .stream()
                 .map(ToolDTO::fromModel)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(dtos);
     }
 
@@ -103,5 +115,64 @@ public class ToolController {
         Tool updated = toolService.updateStatus(id, newStatus);
         ToolDTO result = ToolDTO.fromModel(updated);
         return ResponseEntity.ok(result);
+    }
+
+    @GetMapping("/{id}/check-availability")
+    public ResponseEntity<Map<String, Object>> checkAvailability(
+            @PathVariable Long id,
+            @RequestParam String startDate,
+            @RequestParam String endDate,
+            @AuthenticationPrincipal UserDetails userDetails) {
+
+        Map<String, Object> response = new HashMap<>();
+
+        try {
+            Tool tool = toolService.findById(id)
+                    .orElseThrow(() -> new ResourceNotFoundException("Tool not found"));
+
+            Long userId = userDetailsService.getUserId(userDetails);
+            boolean isOwner = tool.getOwnerId().equals(userId);
+
+            if (isOwner) {
+                response.put(AVAILABLE_KEY, false);
+                response.put(REASON_KEY, "You cannot rent your own tool");
+                return ResponseEntity.ok(response);
+            }
+
+            if (tool.getStatus() == ToolStatus.RENTED) {
+                response.put(AVAILABLE_KEY, false);
+                response.put(REASON_KEY, "A ferramenta está atualmente alugada");
+                return ResponseEntity.ok(response);
+            }
+
+            if (tool.getStatus() == ToolStatus.UNDER_MAINTENANCE) {
+                response.put(AVAILABLE_KEY, false);
+                response.put(REASON_KEY, "A ferramenta está em manutenção");
+                return ResponseEntity.ok(response);
+            }
+
+            if (tool.getStatus() == ToolStatus.INACTIVE) {
+                response.put(AVAILABLE_KEY, false);
+                response.put(REASON_KEY, "A ferramenta está inativa");
+                return ResponseEntity.ok(response);
+            }
+
+            LocalDateTime start = LocalDateTime.parse(startDate);
+            LocalDateTime end = LocalDateTime.parse(endDate);
+
+            boolean available = rentService.checkAvailability(id, start, end);
+
+            response.put(AVAILABLE_KEY, available);
+            if (!available) {
+                response.put(REASON_KEY, "A ferramenta já está reservada para o período selecionado");
+            }
+
+            return ResponseEntity.ok(response);
+
+        } catch (Exception e) {
+            response.put(AVAILABLE_KEY, false);
+            response.put(REASON_KEY, "Erro ao verificar disponibilidade: " + e.getMessage());
+            return ResponseEntity.badRequest().body(response);
+        }
     }
 }
